# shift-puzzle

./: .gitignore  Cargo.toml  README.md  app-e7eee7ccd335af5d.css  app.css  index.html  slide-puzzle-460911f4e5e06097.js  slide-puzzle-460911f4e5e06097_bg.wasm  slide-puzzle-9170d0f0e0043f45.js  slide-puzzle-9170d0f0e0043f45_bg.wasm  slide-puzzle-ad4409fbc701e9b6.js  slide-puzzle-ad4409fbc701e9b6_bg.wasm  slide-puzzle-fd1b781a7150cb2a.js  slide-puzzle-fd1b781a7150cb2a_bg.wasm  style.css
.githooks/: pre-push
.github/workflows/: github-actions.yml
benches/: optimal_solver_benchmark.rs  solver_benchmark.rs
pkg/: README.md  package.json  slide_puzzle.d.ts  slide_puzzle.js  slide_puzzle_bg.wasm  slide_puzzle_bg.wasm.d.ts
src/: board.rs  buttons.rs  error.rs  expander.rs  lib.rs  main.rs  piece.rs  reactive_board.rs  settings.rs  slide_puzzle.rs  solver.rs  utils.rs
src/board/: mod.rs  slide.rs  utils.rs
src/solver/: divide_and_conquer.rs  mod.rs  optimal.rs  test.rs
src/ui/: board.rs  buttons.rs  mod.rs  search_params.rs  touch.rs
www/: index.html  style.css
