[package]
name = "slide-puzzle"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
gloo-timers = "0.2.6"
log = "0.4.17"
rand = "0.8.5"
simple-error = "0.2.3"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = [
    "Touch",
    "TouchEvent",
    "TouchList",
] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[dev-dependencies]
criterion = "0.4.0"
lazy_static = "1.4.0"

[[bench]]
name = "optimal_solver_benchmark"
harness = false
