[package]
name = "slide-puzzle"
version = "0.2.3"
edition = "2021"

[dependencies]
fnv = "1.0.7"
getrandom = { version = "0.2.15", features = ["js"] }
gloo-timers = "0.3.0"
log = "0.4.22"
rand = "0.8.5"
rustc-hash = "2.0.0"
simple-error = "0.3.1"
wasm-bindgen = "0.2.95"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.72", features = [
    "Touch",
    "TouchEvent",
    "TouchList",
    "Window",
] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[dev-dependencies]
criterion = "0.5.1"
lazy_static = "1.5.0"

[[bench]]
name = "optimal_solver_benchmark"
harness = false
